[gd_scene load_steps=7 format=3 uid="uid://ddq1u3wwk2bwj"]

[ext_resource type="Script" uid="uid://b2q2mhktsf8jw" path="res://tank/tank.gd" id="1_77ink"]
[ext_resource type="Script" uid="uid://bxduchl0yk352" path="res://tank/rigidbody/tank_rigidbody.gd" id="2_2mifv"]
[ext_resource type="PackedScene" uid="uid://2su3htx11obo" path="res://tank/loadouts/basic/basic_tankloadout.tscn" id="3_ilbjp"]
[ext_resource type="Script" uid="uid://bqi7mptlmtaa6" path="res://tank/stats/stats_handler.gd" id="4_77ink"]
[ext_resource type="Script" uid="uid://biom1jp1k1k57" path="res://tank/effects/effects_handler.gd" id="6_fa0tr"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_p4mbc"]
friction = 0.5

[node name="Tank" type="Node"]
script = ExtResource("1_77ink")

[node name="TankRigidbody" type="RigidBody2D" parent="."]
collision_layer = 2
collision_mask = 19
mass = 11.406
physics_material_override = SubResource("PhysicsMaterial_p4mbc")
gravity_scale = 0.0
script = ExtResource("2_2mifv")

[node name="BasicTankLoadout" parent="TankRigidbody" instance=ExtResource("3_ilbjp")]

[node name="Items" type="Node" parent="."]

[node name="StatsHandler" type="Node" parent="."]
script = ExtResource("4_77ink")

[node name="EffectsHandler" type="Node" parent="."]
script = ExtResource("6_fa0tr")
